Bruk TjenesteStatus istedenfor boolean properties og en del opprydding
