# apps/mine-stillinger-api/src/main/kotlin/no/naw/paw/minestillinger/BrukerprofilRoute.kt
@@ -14,21 +14,22 @@ import no.nav.paw.security.authentication.model.securityContext
 import no.nav.paw.security.authentication.plugin.autentisering
 import no.naw.paw.minestillinger.api.ApiStillingssoek
 import no.naw.paw.minestillinger.api.domain
+import no.naw.paw.minestillinger.api.vo.toApiTjenesteStatus
 import no.naw.paw.minestillinger.db.ops.hentBrukerProfil
 import no.naw.paw.minestillinger.db.ops.hentSoek
 import no.naw.paw.minestillinger.db.ops.lagreSoek
-import no.naw.paw.minestillinger.db.ops.setErIkkeInteressert
-import no.naw.paw.minestillinger.db.ops.setTjenestenErAktiv
+import no.naw.paw.minestillinger.db.ops.setTjenestatus
 import no.naw.paw.minestillinger.db.ops.slettAlleSoekForBruker
 import no.naw.paw.minestillinger.domain.BrukerProfil
 import no.naw.paw.minestillinger.domain.Stillingssoek
+import no.naw.paw.minestillinger.domain.TjenesteStatus
 import no.naw.paw.minestillinger.domain.api
+import no.naw.paw.minestillinger.domain.feilVedForsøkPåÅSetteKanIkkeLeveres
+import no.naw.paw.minestillinger.domain.toTjenesteStatus
 import org.jetbrains.exposed.v1.jdbc.transactions.transaction
 import java.time.Instant
 
 const val BRUKERPROFIL_PATH = "/api/v1/brukerprofil"
-const val ER_TJENESTEN_AKTIV_PATH = "$BRUKERPROFIL_PATH/erTjenestenLedigeStillingerAktiv"
-const val ER_IKKE_INTERESSERT_PATH = "$BRUKERPROFIL_PATH/erIkkeInteressert"
 
 fun Route.brukerprofilRoute(
     brukerprofilTjeneste: BrukerprofilTjeneste,
@@ -59,24 +60,25 @@ fun Route.brukerprofilRoute(
                     call.respond(HttpStatusCode.NotFound)
                 }
             }
-            put("/erTjenestenLedigeStillingerAktiv/{aktiv}") {
+            put("/tjenestestatus/{tjenestestatus}") {
                 val identitetsnummer = call.securityContext().hentSluttbrukerEllerNull()?.ident
                     ?: throw BadRequestException("Kun støtte for tokenX (sluttbrukere)")
-                val erTjenestenAktiv = call.parameters["aktiv"]?.toBooleanStrictOrNull()
-                    ?: throw BadRequestException("Ugyldig verdi for param 'aktiv'")
+                val tjenesteStatus = call.parameters["tjenestestatus"]
+                    .toApiTjenesteStatus()
+                    .toTjenesteStatus()
+                    .feilVedForsøkPåÅSetteKanIkkeLeveres()
 
-                setTjenestenErAktiv(identitetsnummer, erTjenestenAktiv)
-                call.respond(HttpStatusCode.NoContent)
+                val brukerProfil = hentBrukerProfil(identitetsnummer)
+                when {
+                    brukerProfil == null -> call.respond(HttpStatusCode.NotFound)
+                    brukerProfil.tjenestestatus == TjenesteStatus.KAN_IKKE_LEVERES -> call.respond(HttpStatusCode.Forbidden)
+                    else -> {
+                        setTjenestatus(identitetsnummer, tjenesteStatus)
+                        call.respond(HttpStatusCode.NoContent)
+                    }
+                }
             }
-            put("/erIkkeInteressert/{erIkkeInteressert}") {
-                val identitetsnummer = call.securityContext().hentSluttbrukerEllerNull()?.ident
-                    ?: throw BadRequestException("Kun støtte for tokenX (sluttbrukere)")
-                val erIkkeInteressert = call.parameters["erIkkeInteressert"]?.toBooleanStrictOrNull()
-                    ?: throw BadRequestException("Ugyldig verdi for param 'erIkkeInteressert'")
 
-                setErIkkeInteressert(identitetsnummer, erIkkeInteressert)
-                call.respond(HttpStatusCode.NoContent)
-            }
             put<List<ApiStillingssoek>>("/stillingssoek") { stillingssoek ->
                 val identitetsnummer = call.securityContext().hentSluttbrukerEllerNull()?.ident
                     ?: throw BadRequestException("Kun støtte for tokenX (sluttbrukere)")
