# apps/mine-stillinger-api/src/main/kotlin/no/naw/paw/minestillinger/api/vo/ApiBrukerprofil.kt
@@ -4,8 +4,6 @@ import no.naw.paw.minestillinger.api.ApiStillingssoek
 
 data class ApiBrukerprofil(
     val identitetsnummer: String,
-    val kanTilbysTjenestenLedigeStillinger: Boolean,
-    val erTjenestenLedigeStillingerAktiv: Boolean,
+    val tjenestestatus: ApiTjenesteStatus,
     val stillingssoek: List<ApiStillingssoek>,
-    val erIkkeInteressert: Boolean,
 )
