# apps/mine-stillinger-api/src/main/kotlin/no/naw/paw/minestillinger/domain/BrukerProfil.kt
@@ -2,17 +2,17 @@ package no.naw.paw.minestillinger.domain
 
 import no.nav.paw.model.Identitetsnummer
 import no.naw.paw.minestillinger.api.vo.ApiBrukerprofil
+import no.naw.paw.minestillinger.api.vo.ApiTjenesteStatus
 import java.time.Instant
 import java.util.UUID
 
 data class BrukerProfil(
     val id: Long,
     val identitetsnummer: Identitetsnummer,
-    val tjenestenErAktiv: Boolean,
     val kanTilbysTjenesten: KanTilbysTjenesten,
     val kanTilbysTjenestenTimestamp: Instant,
+    val tjenestestatus: TjenesteStatus,
     val harBruktTjenesten: Boolean,
-    val erIkkeInteressert: Boolean,
     val arbeidssoekerperiodeId: UUID,
     val arbeidssoekerperiodeAvsluttet: Instant?
 )
@@ -20,13 +20,12 @@ data class BrukerProfil(
 fun BrukerProfil.api(): ApiBrukerprofil {
     return ApiBrukerprofil(
         identitetsnummer = identitetsnummer.verdi,
-        kanTilbysTjenestenLedigeStillinger = when (kanTilbysTjenesten) {
-            KanTilbysTjenesten.JA -> true
-            KanTilbysTjenesten.NEI -> false
-            KanTilbysTjenesten.UKJENT -> throw IllegalStateException("Intern feil: 'kanTilbysTjenesten' er ikke utledet")
+        tjenestestatus = when (tjenestestatus) {
+            TjenesteStatus.AKTIV -> ApiTjenesteStatus.AKTIV
+            TjenesteStatus.INAKTIV -> ApiTjenesteStatus.INAKTIV
+            TjenesteStatus.OPT_OUT -> ApiTjenesteStatus.OPT_OUT
+            TjenesteStatus.KAN_IKKE_LEVERES -> ApiTjenesteStatus.KAN_IKKE_LEVERES
         },
-        erTjenestenLedigeStillingerAktiv = tjenestenErAktiv,
-        erIkkeInteressert = erIkkeInteressert,
         stillingssoek = emptyList()
     )
 }
